Made first page with float

--- a/css/float.css
+++ b/css/float.css
@@ -1,5 +1,261 @@
+/******************
+* Global settings  *
+*******************/
+@font-face {
+	font-family: SuezOne-Regular;  
+	src: url(../fonts/Suez_One/SuezOne-Regular.ttf);  
+	font-weight: normal;  
+}
+
 * {
 margin: 0;
 padding: 0;
+box-sizing: border-box;
 }
 
+body {
+    background:lightgray;
+}
+
+section {
+    width: 1280px;
+    margin: auto;
+}
+
+img {
+    width: 100%;
+}
+
+h1,
+h2,
+h3 {
+    font-family: SuezOne-Regular, sans-serif;
+}
+
+
+h1 {
+    font-size: 5em;
+    letter-spacing: 5px;
+    text-shadow: 0px 5px 0px #000;
+}
+
+
+h3 {
+    color: #000;
+    font-size: 1.6em;
+}
+
+#first,
+#second {
+    margin: 120px auto;
+}
+
+/******************
+* Header section  *
+*******************/
+
+.header {
+    color: white;
+    text-align: center;
+    padding: 80px 0px;
+    background-image: linear-gradient( 358.3deg,  rgba(255,82,168,1) 12.9%, rgba(177,118,240,1) 134.3% );
+    border-bottom: 8px solid #100e17;
+    height: 90vh;
+    position: relative;
+}
+
+.header .fa {
+    position: absolute;
+    bottom: 50px;
+    color: white;
+    font-size: 60px;
+    text-shadow: 0px 5px 0px #000;
+    margin-left: -30px;
+}
+
+.nav {
+    position: sticky; top: 0px;
+    background-color: #100e17;
+    padding: 20px;
+    z-index: 1000;
+}
+
+.nav a {
+    font-family: SuezOne-Regular, sans-serif;
+    font-size: 1.6em;
+    color: white;
+    text-decoration: none;
+    margin-top: 10px; 
+    margin-right: 25px;
+}
+
+.nav a:hover {
+    color: rgb(255,82,168);
+    border-bottom: 3px solid rgb(255,82,168);
+    
+}
+
+.nav ul {
+    padding: 10px;
+}
+
+.nav ul li{
+    display: inline-block;
+    margin-right: 15px;
+}
+
+.nav p {
+    color: white;
+}
+
+.avatar {
+    width: 50px;
+    border-radius: 50%;
+    border: 2px dashed white;
+}
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
+}
+
+.header_img {
+    border-radius: 50%;
+    border: 6px solid black;
+    width: 200px;
+    
+}
+
+
+/******************
+* Articles section  *
+*******************/
+
+.content_item {
+    background: #fff;
+    box-shadow: 10px 10px 5px gray;
+    margin-bottom: 40px;
+    padding: 30px;
+    border-radius: 10px;
+}
+
+.content_item p {
+    font-size: 1.5rem;
+    line-height: 1.5;
+    color:#100e17;
+}
+
+.content_item img {
+    width: 300px;
+    margin-right: 20px;
+}
+
+
+/******************
+* Skills section  *
+*******************/
+
+.skills {
+    margin: 0 auto;
+}
+
+.skills_item {
+    padding: 20px 20px 40px 20px; 
+    text-align: center;
+    margin-right: 20px;
+    width: 400px;
+    box-shadow: 10px 10px 20px gray;
+    background: #fff;
+    border-radius: 5px;
+}
+
+.skills_header {
+   border-bottom: 6px solid rgb(255,82,168);;
+}
+
+.skills_item p {
+    font-size: 1.3em;
+    margin-bottom: 30px;
+    line-height: 1.6;
+}
+
+.skills_item img {
+    margin: 30px 0;
+}
+
+.skills_item button {
+    font-size: 1.5em;
+    font-weight: 600;
+    color: #100e17;
+    background: linear-gradient( 358.3deg,  rgba(255,82,168,1) 12.9%, rgba(177,118,240,1) 134.3% );
+    padding: 10px 100px;
+    border: none;
+    border-radius: 5px;
+    border-bottom: 4px solid #100e17;
+}
+
+.skills_item button:hover {
+    color: white;
+}
+
+/******************
+* Footer section  *
+*******************/
+
+footer {
+    text-align: center;
+    color: white;
+    background: #100e17;
+    padding: 40px;
+    font-size: 1.6em;
+    font-family: SuezOne-Regular, sans-serif;
+}
+
+footer ul {
+    margin-top: 15px;
+}
+
+footer .fa {
+    color: rgb(255,82,168);
+    font-size: 35px;
+}
+
+footer span {
+    font-size: 45px;
+    color: rgb(255,82,168);
+}
+
+.social li {
+    display: inline-block;
+    margin-left: 26px;
+    
+}
+
+.social li a {
+    color: white;
+    text-decoration: none;
+}
+
+.social li:hover {
+    border-bottom: 3px solid rgb(255,82,168);
+}
+
+
+.social i {
+    margin-right: 5px;
+}
+
+
+
+/******************
+*   Clearfix      *
+*******************/
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
