--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -39,6 +39,10 @@ h1 {
     text-shadow: 0px 5px 0px #000;
 }
 
+h2 {
+    color: black;
+}
+
 
 h3 {
     color: #000;
@@ -58,10 +62,15 @@ h3 {
     color: white;
     text-align: center;
     padding: 80px 0px;
-    background-image: linear-gradient( 358.3deg,  rgba(255,82,168,1) 12.9%, rgba(177,118,240,1) 134.3% );
+    background: linear-gradient( 358.3deg,  rgba(255,82,168,0.8) 12.9%, rgba(177,118,240,1) 134.3% ),
+                url('https://placeimg.com/1000/600/nature/grayscale') round;
     border-bottom: 8px solid #100e17;
     height: 90vh;
     position: relative;
+}
+
+.header h2 {
+
 }
 
 .header .fa {
