--- a/css/float.css
+++ b/css/float.css
@@ -18,7 +18,7 @@ body {
 }
 
 section {
-    width: 1280px;
+    width: 95%;
     margin: auto;
 }
 
@@ -39,6 +39,9 @@ h1 {
     text-shadow: 0px 5px 0px #000;
 }
 
+h2 {
+    color: black;
+}
 
 h3 {
     color: #000;
@@ -58,7 +61,8 @@ h3 {
     color: white;
     text-align: center;
     padding: 80px 0px;
-    background-image: linear-gradient( 358.3deg,  rgba(255,82,168,1) 12.9%, rgba(177,118,240,1) 134.3% );
+    background: linear-gradient( 358.3deg,  rgba(255,82,168,0.8) 12.9%, rgba(177,118,240,1) 134.3% ),
+                url('https://placeimg.com/1000/600/nature/grayscale') round;
     border-bottom: 8px solid #100e17;
     height: 90vh;
     position: relative;
@@ -166,16 +170,19 @@ h3 {
 
 .skills {
     margin: 0 auto;
+    text-align: center;
 }
 
 .skills_item {
     padding: 20px 20px 40px 20px; 
     text-align: center;
-    margin-right: 20px;
+    margin-right: 25px;
     width: 400px;
     box-shadow: 10px 10px 0px grey;
     background: #fff;
     border-radius: 5px;
+    display: inline-block;
+    margin-bottom: 25px;
 }
 
 .skills_header {
